[metadata]
name = flask-telemetry-tool
version = 0.1.0
author = Elena Kotlyarova
author_email = elenakotlyrova@gmail.com
description = Telemetry tool app
#long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Nimeriya778/flask-telemetry-tool

[options]
packages = find:
zip_safe = True
install_requires =
    Flask ~=2.2
    matplotlib ~=3.5
    Flask-SQLAlchemy ~=2.5
    sqlalchemy[mypy] ~=1.4
